# img_proc

./: CMakeLists.txt  README.md  brightnesswindow.cpp  brightnesswindow.h  brightnesswindow.ui  converter.cpp  converter.h  data2d.h  filter.cpp  filter.h  filterwindow.cpp  filterwindow.h  filterwindow.ui  imagelabel.cpp  imagelabel.h  imageviewer.cpp  imageviewer.h  imgdata.cpp  imgdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewindow.cpp  messagewindow.h  messagewindow.ui  morph.cpp  morph.h  morphwindow.cpp  morphwindow.h  morphwindow.ui  scrollbar.cpp  scrollbar.h  search.cpp  search.h  searchwindow.cpp  searchwindow.h  searchwindow.ui  segmentation.cpp  segmentation.h  segmentationwindow.cpp  (+7 more)
